add config files

--- a/erp-privilege/src/main/envs/env-dev.properties
+++ b/erp-privilege/src/main/envs/env-dev.properties
@@ -1,26 +1,67 @@
-#datasource
-datasource.driverClassName=com.mysql.jdbc.Driver
-datasource.url=jdbc:mysql://10.0.0.100:3306/dubbo_test?serverTimezone=GMT&amp;useUnicode=true&amp;characterEncoding=UTF-8
-datasource.name=root
-datasource.password=root
-datasource.schema=dubbo_test
-#datasource.driverClassName=oracle.jdbc.driver.OracleDriver  
-#datasource.url=jdbc\:oracle\:thin\:@192.168.163.215\:1521\:GOS  
-#datasource.name=gos  
-#datasource.password=gos_Tao  
-datasource.maxActive=20
-datasource.initialiSize=10
-datasource.maxWait=60000
-datasource.minIdle=8
-datasource.removeAbandonedTimeout=180
-datasource.timeBetweenEvictionRunsMillis=10000
-datasource.minEvictableIdleTimeMillis=300000
-datasource.validationQuery=SELECT 'x' from dual 
-datasource.maxPoolPreparedStatementPerConnectionSize=20
+app.name=erp-privilege
+#==========scm==================
+#scm.host=https://10.0.0.100/svn/ERP/test/erp-service-basicdata
 
-env.type=DEV
-loggingRoot=.
-loggingLevel=DEBUG
-server.name=smartmq
+#==========dubbo=================
+dubbo.registry=..
+dubbo.registry.protocol=zookeeper
+dubbo.owner=canaan
+dubbo.provider.host=127.0.0.1
+dubbo.provider.protocol=dubbo
+dubbo.provider.port=20880
+dubbo.provider.retries=0
+dubbo.provider.timeout=10000
+dubbo.provider.version=1.0
+dubbo.consumer.retries=1
+dubbo.comsumer.timeout=10000
+dubbo.consumer.version=1.0
+dubbo.zkaddress=zookeeper://10.0.0.103:2181
+#============mysql================
+jdbc.url=jdbc:mysql://10.0.0.100:3306/dubbo_test?serverTimezone=GMT&amp;useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.username=root
+jdbc.password=root
+
+#============durid=================
+druid.initialSize=1
+druid.minIdle=1
+druid.maxActive=10
+druid.poolPreparedStatements=true
+druid.maxPoolPreparedStatementPerConnectionSize=50
+druid.maxOpenPreparedStatements=50
+druid.maxWait=60000
+druid.timeBetweenEvictionRunsMillis=60000
+durid.timeBetweenLogStatsMillis=300000
+druid.minEvictableIdleTimeMillis=300000
+druid.filters=wall
+
+durid.mergeSql=true
+durid.slowSqlMillis=3000
+durid.logSlowSql=true
+
+#=============fastdfs===============
+fdfsserver=10.0.0.104:22122
+fdfsnginx=10.0.0.104:8080
+fdfsport=8080
+
+#=============sentry=================
+sentry.dsn=http://768c4172ac43491cadc323ede25194b9:b0c92f4591b24e7cac4d37737a768db0@10.0.0.249:9000/22
+
+#===========redis cluster=============
+redis.expire=18000
+cluster1.host=10.0.0.102
+cluster1.port=7000
+
+cluster2.host=10.0.0.102
+cluster2.port=7001
+
+cluster3.host=10.0.0.102
+cluster3.port=7002
+redis.cluster.password=
+
+#============slf4j===================
+log.home=../logs
+log.dir.infobackup=log_back_up
+log.filesize=5MB
+log.level=INFO
 
 
