添加配置文件，保存临时更改

--- a/erp-jgsf/pom.xml
+++ b/erp-jgsf/pom.xml
@@ -99,6 +99,16 @@
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring4</artifactId>
 		</dependency>
+		
+		<!-- dozer -->
+		<dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer-spring</artifactId>
+        </dependency>
 	</dependencies>
   
 </project>
