--- a/erp-distribute/pom.xml
+++ b/erp-distribute/pom.xml
@@ -1,89 +1,126 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.canaan</groupId>
-    <artifactId>erp-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+	    <groupId>com.canaan</groupId>
+	    <artifactId>erp-parent</artifactId>
+	    <version>0.0.1-SNAPSHOT</version>
+    </parent>
   
-  <artifactId>erp-distribute</artifactId>
-  <name>erp-distribute</name>
-  <url>http://maven.apache.org</url>
+	<artifactId>erp-distribute</artifactId>
+	<name>erp-distribute</name>
+    <url>http://maven.apache.org</url>
   
-  <dependencies>
+    <dependencies>
 	
-	<dependency>
-         <groupId>org.projectlombok</groupId>
-         <artifactId>lombok</artifactId>
-     </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
      
-	<dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-    </dependency>
+        <dependency>
+	        <groupId>com.google.guava</groupId>
+	        <artifactId>guava</artifactId>
+        </dependency>
 	
-	<dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-lang3</artifactId>
-    </dependency>
+        <dependency>
+	        <groupId>org.apache.commons</groupId>
+	        <artifactId>commons-lang3</artifactId>
+        </dependency>
     
-    <dependency>
-	    <groupId>org.apache.commons</groupId>
-	    <artifactId>commons-collections4</artifactId>
-	</dependency>
+        <dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-collections4</artifactId>
+	   </dependency>
 	
-	<dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-    </dependency>
+	   <dependency>
+	        <groupId>joda-time</groupId>
+	        <artifactId>joda-time</artifactId>
+        </dependency>
     
-	<!-- aspectj -->
-    <dependency>
-        <groupId>org.aspectj</groupId>
-        <artifactId>aspectjrt</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.aspectj</groupId>
-        <artifactId>aspectjtools</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.aspectj</groupId>
-        <artifactId>aspectjweaver</artifactId>
-    </dependency>
-	
-	<dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>jcl-over-slf4j</artifactId>
-    </dependency>
+		<!-- aspectj -->
+	    <dependency>
+	        <groupId>org.aspectj</groupId>
+	        <artifactId>aspectjrt</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.aspectj</groupId>
+	        <artifactId>aspectjtools</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.aspectj</groupId>
+	        <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        
+        <dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
     
-    <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-core</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.logback-extensions</groupId>
-        <artifactId>logback-ext-spring</artifactId>
-    </dependency>
+        <dependency>
+	        <groupId>ch.qos.logback</groupId>
+	        <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>ch.qos.logback</groupId>
+	        <artifactId>logback-core</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.logback-extensions</groupId>
+	        <artifactId>logback-ext-spring</artifactId>
+        </dependency>
 	
-	<dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>fastjson</artifactId>
-    </dependency>
+	   <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-core</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-beans</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-aop</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-tx</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context-support</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-orm</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-websocket</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-jms</artifactId>
+        </dependency>
 	
-    <dependency>
-	    <groupId>com.alibaba</groupId>
-	    <artifactId>dubbo</artifactId>
-	</dependency>
+        <dependency>
+	        <groupId>com.alibaba</groupId>
+	        <artifactId>fastjson</artifactId>
+        </dependency>
 	
-  </dependencies>
+        <dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>dubbo</artifactId>
+	   </dependency>
+	
+    </dependencies>
 </project>
