--- a/erp-jgsf/src/main/webapp/WEB-INF/web.xml
+++ b/erp-jgsf/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 	</context-param>
 	<context-param>
 		<param-name>logbackConfigLocation</param-name>
-		<param-value>classpath:configs/logback.xml</param-value>
+		<param-value>classpath:logback.xml</param-value>
 	</context-param>
 	<context-param>    
 		<param-name>webAppRootKey</param-name>  
