--- a/erp-common/pom.xml
+++ b/erp-common/pom.xml
@@ -22,7 +22,11 @@
        <groupId>javax.persistence</groupId>
        <artifactId>persistence-api</artifactId>
     </dependency>
-    
+    <!-- jackson -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
