--- a/erp-distribute/pom.xml
+++ b/erp-distribute/pom.xml
@@ -38,6 +38,12 @@
 	        <groupId>joda-time</groupId>
 	        <artifactId>joda-time</artifactId>
         </dependency>
+        
+        <!-- zookeeper -->
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+        </dependency>
     
 		<!-- aspectj -->
 	    <dependency>
@@ -54,13 +60,18 @@
         </dependency>
         
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+        
+        <!-- <dependency>
 	        <groupId>org.slf4j</groupId>
 	        <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
 	        <groupId>org.slf4j</groupId>
 	        <artifactId>jcl-over-slf4j</artifactId>
-        </dependency>
+        </dependency> -->
     
         <dependency>
 	        <groupId>ch.qos.logback</groupId>
@@ -111,6 +122,10 @@
 	        <groupId>org.springframework</groupId>
 	        <artifactId>spring-jms</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
 	
         <dependency>
 	        <groupId>com.alibaba</groupId>
@@ -121,6 +136,11 @@
 		    <groupId>com.alibaba</groupId>
 		    <artifactId>dubbo</artifactId>
 	   </dependency>
+	   
+	   <dependency>
+           <groupId>io.sentry</groupId>
+           <artifactId>sentry-logback</artifactId>
+       </dependency>
 	
     </dependencies>
 </project>
