--- a/erp-privilege/pom.xml
+++ b/erp-privilege/pom.xml
@@ -64,24 +64,60 @@
         </plugin>
         </plugins> -->
     </build>
+    
+    <profiles>
+        <!-- 开发环境 -->
+        <profile>
+            <id>dev</id>
+            <properties>
+                <env>dev</env>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <!-- 测试环境 -->
+        <profile>
+            <id>test</id>
+            <properties>
+                <env>test</env>
+            </properties>
+        </profile>
+        <!-- 正式环境 -->
+        <profile>
+            <id>pub</id>
+            <properties>
+                <env>pub</env>
+            </properties>
+        </profile>
+    </profiles>
+    
+    
     <dependencies>
     	<dependency>
    		   <groupId>com.canaan</groupId>
    		   <artifactId>erp-privilege-api</artifactId>
    	    </dependency>
-    
         <dependency>
    		   <groupId>com.canaan</groupId>
    		   <artifactId>erp-core</artifactId>
    	    </dependency>
-   	    <!-- jooq -->
-           <dependency>
-            <groupId>org.jooq</groupId>
-            <artifactId>jooq-codegen</artifactId>
-        </dependency>
+   	    
+       <!--  <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency> -->
+        <!-- mysql -->
         <dependency>
-            <groupId>org.jooq</groupId>
-            <artifactId>jooq</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        
+        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
