--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
         
         <quartz.version>2.2.3</quartz.version>
         
+        <sentry.version>1.4.0</sentry.version>
         <shiro.version>1.3.2</shiro.version>
         <shiro-redis.version>2.4.2.1-RELEASE</shiro-redis.version>
         <spring-data-redis.version>1.8.3.RELEASE</spring-data-redis.version>
@@ -101,34 +102,6 @@
         
         
     </properties>
-    
-    <profiles>
-        <!-- 生产环境 -->
-        <profile>
-            <id>production</id>
-            <properties>
-                <env>production</env>
-            </properties>
-        </profile>
-        <!-- 测试环境 -->
-        <profile>
-            <id>test</id>
-            <properties>
-                <env>test</env>
-            </properties>
-        </profile>
-        <!-- 开发环境 -->
-        <profile>
-            <id>dev</id>
-            <properties>
-                <env>dev</env>
-            </properties>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-        </profile>
-    </profiles>
-    
     <build>
          <!--配置资源文件过滤，如果有其他需要打包的资源，需要重载此配置节 -->
         <directory>target</directory>
@@ -704,6 +677,7 @@
                 <version>${joda-time.version}</version>
             </dependency>
             
+            
             <dependency>
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
@@ -715,7 +689,7 @@
                 <version>${jackson-core-asl.version}</version>
             </dependency>
 
-
+            
             <dependency>
                 <groupId>org.quartz-scheduler</groupId>
                 <artifactId>quartz</artifactId>
@@ -728,10 +702,22 @@
                 <artifactId>spring-data-redis</artifactId>
                 <version>${spring-data-redis.version}</version>
             </dependency>
+            
+            <!-- zookeeper -->
             <dependency>
                 <groupId>com.101tec</groupId>
                 <artifactId>zkclient</artifactId>
                 <version>${zkclient.version}</version>
+                <exclusions>
+	                <exclusion>
+	                    <artifactId>slf4j-log4j12</artifactId>
+	                    <groupId>org.slf4j</groupId>
+	                </exclusion>
+	                <exclusion>
+	                    <artifactId>log4j</artifactId>
+	                    <groupId>log4j</groupId>
+	                </exclusion>
+	            </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.zookeeper</groupId>
@@ -765,6 +751,12 @@
                 <groupId>com.lmax</groupId>
                 <artifactId>disruptor</artifactId>
                 <version>${lmax.disruptor.version}</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>io.sentry</groupId>
+                <artifactId>sentry-logback</artifactId>
+                <version>${sentry.version}</version>
             </dependency>
             
             <dependency>
