jgsf 添加全局异常准备

--- a/erp-privilege/src/main/envs/env-dev.properties
+++ b/erp-privilege/src/main/envs/env-dev.properties
@@ -17,7 +17,8 @@ dubbo.comsumer.timeout=10000
 dubbo.consumer.version=1.0
 dubbo.zkaddress=zookeeper://10.0.0.103:2181
 #============mysql================
-jdbc.url=jdbc:mysql://10.0.0.100:3306/dubbo_test?serverTimezone=GMT&amp;useUnicode=true&amp;characterEncoding=UTF-8
+#jdbc.url=jdbc:mysql://10.0.0.100:3306/dubbo_test?serverTimezone=GMT&amp;useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/dubbo_test?serverTimezone=GMT&amp;useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root
 
