--- a/erp-jgsf/src/main/envs/env-dev.properties
+++ b/erp-jgsf/src/main/envs/env-dev.properties
@@ -12,9 +12,21 @@ dubbo.comsumer.timeout=10000
 dubbo.consumer.version=1.0
 dubbo.zkaddress=zookeeper://10.0.0.103:2181
 
-
 #=============sentry=================
 sentry.dsn=http://970225e7b17f4bc888cbe69e79a57a54:22cf310c25b84fa7970842d5b425430a@10.0.0.249:9000/35
+
+#===========redis cluster=============
+redis.expire=18000
+cluster1.host=10.0.0.102
+cluster1.port=7000
+
+cluster2.host=10.0.0.102
+cluster2.port=7001
+
+cluster3.host=10.0.0.102
+cluster3.port=7002
+redis.cluster.password=
+
 
 #============slf4j===================
 log.home=../logs
