--- a/erp-jgsf/pom.xml
+++ b/erp-jgsf/pom.xml
@@ -131,6 +131,11 @@
         </dependency>
         
         <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
+            
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
         </dependency>
