--- a/erp-jgsf/src/main/webapp/WEB-INF/web.xml
+++ b/erp-jgsf/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	<display-name>erp-jgsf</display-name>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:configs/spring-*.xml</param-value>
+		<param-value>classpath*:configs/spring-*.xml</param-value>
 	</context-param>
 	<context-param>
 		<param-name>logbackConfigLocation</param-name>
