--- a/erp-common/pom.xml
+++ b/erp-common/pom.xml
@@ -18,19 +18,31 @@
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
      </dependency>
-    <dependency>
+     
+    <!-- <dependency>
        <groupId>javax.persistence</groupId>
        <artifactId>persistence-api</artifactId>
-    </dependency>
+    </dependency> -->
     <!-- jackson -->
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
     </dependency>
+    
+    <!-- swagger2 -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
     </dependency>
+    <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+    </dependency>
+    
+    <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-validator</artifactId>
+     </dependency>
     
     
   </dependencies>
