--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
         <junit.version>4.12</junit.version>
         
         <org.slf4j.version>1.7.22</org.slf4j.version>
-        <org.hibernate.version>5.4.0.Final</org.hibernate.version>
+        <org.hibernate.version>5.4.1.Final</org.hibernate.version>
         <org.aspectj.version>1.8.10</org.aspectj.version>
         <org.apache.poi.version>3.10-FINAL</org.apache.poi.version>
         
@@ -90,6 +90,8 @@
         <spring-data-redis.version>1.8.3.RELEASE</spring-data-redis.version>
         <spring.version>4.3.8.RELEASE</spring.version>
         <swagger.version>2.5.0</swagger.version>
+        <swagger-maven-plugin.version>3.1.5</swagger-maven-plugin.version>
+        <swagger2markup-maven-plugin.version>1.3.3</swagger2markup-maven-plugin.version>
         <system-rules.version>1.6.0</system-rules.version>
         
         <thymeleaf.version>3.0.6.RELEASE</thymeleaf.version>
@@ -211,6 +213,16 @@
 				    <artifactId>jooq-codegen-maven</artifactId>
 				    <version>${jooq.version}</version>
 				</plugin>
+				<plugin>
+					<groupId>com.github.kongchen</groupId>
+			        <artifactId>swagger-maven-plugin</artifactId>
+			        <version>${swagger-maven-plugin.version}</version>
+		        </plugin>
+		        <plugin>
+			        <groupId>io.github.swagger2markup</groupId>
+			        <artifactId>swagger2markup-maven-plugin</artifactId>
+			        <version>${swagger2markup-maven-plugin.version}</version>
+			    </plugin>
             </plugins>
         </pluginManagement>
         
