--- a/erp-jgsf/pom.xml
+++ b/erp-jgsf/pom.xml
@@ -199,6 +199,11 @@
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
         </dependency>
+        
+        <dependency>
+        	<groupId>org.freemarker</groupId>
+        	<artifactId>freemarker</artifactId>
+		</dependency>
 	</dependencies>
   
 </project>
