--- a/erp-jgsf/src/main/webapp/WEB-INF/web.xml
+++ b/erp-jgsf/src/main/webapp/WEB-INF/web.xml
@@ -77,10 +77,15 @@
 		<servlet-name>erp</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
+            <param-name>throwExceptionIfNoHandlerFound</param-name>
+            <param-value>true</param-value>
+        </init-param>
+		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath:configs/dispatch-servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
+		<async-supported>true</async-supported>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>erp</servlet-name>
