--- a/erp-core/pom.xml
+++ b/erp-core/pom.xml
@@ -30,6 +30,12 @@
 	        <artifactId>dozer-spring</artifactId>
 	    </dependency>
 	    
+	    <!-- mybatis-plus -->
+	    <dependency>
+		    <groupId>com.baomidou</groupId>
+		    <artifactId>mybatis-plus</artifactId>
+		</dependency>
+	    
 	    <!-- jooq -->
            <dependency>
             <groupId>org.jooq</groupId>
