--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <logback-redis-appender.version>1.1.5</logback-redis-appender.version>
         <lombok.version>1.16.18</lombok.version>
         
+        <mybatis-plus.version>2.1.7</mybatis-plus.version>
         <mysql-connector.version>6.0.5</mysql-connector.version>
         
         <jackson.version>2.8.7</jackson.version>
@@ -357,6 +358,12 @@
                <version>${project.version}</version>
             </dependency>
             
+            <dependency>
+               <groupId>com.canaan</groupId>
+               <artifactId>erp-product-api</artifactId>
+               <version>${project.version}</version>
+            </dependency>
+            
             <!-- erp -->
         	<dependency>
         		<groupId>com.canaan</groupId>
@@ -384,6 +391,11 @@
         		<version>${project.version}</version>
         	</dependency>
         	
+        	<dependency>
+			    <groupId>com.baomidou</groupId>
+			    <artifactId>mybatis-plus</artifactId>
+			    <version>${mybatis-plus.version}</version>
+			</dependency>
         	<!-- java persistence -->
         	<dependency>
 			   <groupId>javax.persistence</groupId>
@@ -827,5 +839,7 @@
     <module>erp-jgsf</module>
     <module>erp-privilege-api</module>
     <module>erp-core</module>
+    <module>erp-product</module>
+    <module>erp-product-api</module>
   </modules>
 </project>
