--- a/erp-common/pom.xml
+++ b/erp-common/pom.xml
@@ -19,6 +19,11 @@
          <artifactId>lombok</artifactId>
      </dependency>
      
+     <dependency>
+         <groupId>com.baomidou</groupId>
+         <artifactId>mybatis-plus-support</artifactId>
+     </dependency>
+     
     <!-- <dependency>
        <groupId>javax.persistence</groupId>
        <artifactId>persistence-api</artifactId>
