--- a/erp-core/pom.xml
+++ b/erp-core/pom.xml
@@ -36,6 +36,10 @@
 		    <artifactId>mybatis-plus</artifactId>
 		</dependency>
 	    
+	    <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+        </dependency>
 	    <!-- jooq -->
            <dependency>
             <groupId>org.jooq</groupId>
@@ -51,6 +55,11 @@
             <artifactId>druid</artifactId>
         </dependency>
 	    
+	    <!-- mysql -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
 	    
 	    <!-- log4j2的RollingRandomAccessFile支持（异步日志记录） -->
 	    <dependency>
