--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,8 @@
         
         <thymeleaf.version>3.0.6.RELEASE</thymeleaf.version>
         
+        <velocity.version>2.0</velocity.version>
+        
         <xml-apis.version>1.3.04</xml-apis.version>
         <xmlgraphics-commons.version>1.2</xmlgraphics-commons.version>
         
@@ -391,6 +393,7 @@
         		<version>${project.version}</version>
         	</dependency>
         	
+        	<!-- mybatis-plus -->
         	<dependency>
 			    <groupId>com.baomidou</groupId>
 			    <artifactId>mybatis-plus</artifactId>
@@ -402,6 +405,13 @@
                 <artifactId>mybatis-plus-support</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
+            
+            <!-- velocity for mybatis-plus generator -->
+            <dependency>
+			    <groupId>org.apache.velocity</groupId>
+			    <artifactId>velocity-engine-core</artifactId>
+			    <version>${velocity.version}</version>
+			</dependency>
         	<!-- java persistence -->
         	<dependency>
 			   <groupId>javax.persistence</groupId>
