--- a/erp-distribute/pom.xml
+++ b/erp-distribute/pom.xml
@@ -159,5 +159,16 @@
          <groupId>com.github.qiujiayu</groupId>
          <artifactId>autoload-cache</artifactId>
        </dependency>
+       
+       <!-- hession serialize for autoload cache -->
+       <dependency>
+           <groupId>com.caucho</groupId>
+           <artifactId>hessian</artifactId>
+       </dependency>
+       
+       <dependency>
+           <groupId>org.apache.commons</groupId>
+           <artifactId>commons-compress</artifactId>
+       </dependency>
     </dependencies>
 </project>
