--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <commons-fileupload.version>1.3.2</commons-fileupload.version>
         <commons-lang3.version>3.7</commons-lang3.version>
         <commons-collections4.version>4.0</commons-collections4.version>
+        <commons-compress.version>1.14</commons-compress.version>
         
         <druid.version>1.0.27</druid.version>
         <dubbo.version>2.5.3</dubbo.version>
@@ -54,6 +55,7 @@
         <httpclient.version>4.5.2</httpclient.version>
         <httpcore.version>4.4.3</httpcore.version>
         <hamcrest.version>1.3</hamcrest.version>
+        <hession.version>4.0.38</hession.version>
         
         <imgscalr-lib.version>4.2</imgscalr-lib.version>
         
@@ -402,13 +404,19 @@
 			  <version>${autoload-cache.version}</version>
 			</dependency>
         	
+        	<!-- hession serialize for autoload cache -->
+        	<dependency>
+			    <groupId>com.caucho</groupId>
+			    <artifactId>hessian</artifactId>
+			    <version>${hession.version}</version>
+			</dependency>
+        	
         	<!-- mybatis-plus -->
         	<dependency>
 			    <groupId>com.baomidou</groupId>
 			    <artifactId>mybatis-plus</artifactId>
 			    <version>${mybatis-plus.version}</version>
 			</dependency>
-			
 			<dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-support</artifactId>
@@ -541,6 +549,12 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
+			<dependency>
+			    <groupId>org.apache.commons</groupId>
+			    <artifactId>commons-compress</artifactId>
+			    <version>${commons-compress.version}</version>
+			</dependency>
+            
 
             <!-- jackson -->
             <dependency>
