--- a/erp-distribute/pom.xml
+++ b/erp-distribute/pom.xml
@@ -107,6 +107,10 @@
 	        <artifactId>spring-tx</artifactId>
         </dependency>
         <dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-expression</artifactId>
+		</dependency>
+        <dependency>
 	        <groupId>org.springframework</groupId>
 	        <artifactId>spring-context-support</artifactId>
         </dependency>
@@ -169,6 +173,11 @@
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
+       </dependency>
+       
+       <dependency>
+           <groupId>biz.paluch.redis</groupId>
+           <artifactId>lettuce</artifactId>
        </dependency>
     </dependencies>
 </project>
