--- a/erp-distribute/pom.xml
+++ b/erp-distribute/pom.xml
@@ -14,6 +14,11 @@
   
     <dependencies>
 	   
+	   <dependency>
+	       <groupId>com.canaan</groupId>
+	       <artifactId>erp-util</artifactId>
+	   </dependency>
+	   
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -33,6 +38,11 @@
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-collections4</artifactId>
 	   </dependency>
+	   
+	   <dependency>
+           <groupId>commons-beanutils</groupId>
+           <artifactId>commons-beanutils</artifactId>
+       </dependency>
 	
 	   <dependency>
 	        <groupId>joda-time</groupId>
