--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,13 @@
         <!-- lib versions  -->
         <autoload-cache.version>6.8</autoload-cache.version>
         
+        <commons-beanutils.version>1.9.3</commons-beanutils.version>
         <commons-io.version>2.4</commons-io.version>
         <commons-logging.version>1.2</commons-logging.version>
         <commons-codec.version>1.10</commons-codec.version>
         <commons-fileupload.version>1.3.2</commons-fileupload.version>
         <commons-lang3.version>3.7</commons-lang3.version>
-        <commons-collections4.version>4.0</commons-collections4.version>
+        <commons-collections4.version>4.1</commons-collections4.version>
         <commons-compress.version>1.14</commons-compress.version>
         
         <druid.version>1.0.27</druid.version>
@@ -372,6 +373,11 @@
             </dependency>
             
             <!-- erp -->
+            <dependency>
+                <groupId>com.canaan</groupId>
+                <artifactId>erp-util</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         	<dependency>
         		<groupId>com.canaan</groupId>
         		<artifactId>erp-api-common</artifactId>
@@ -534,6 +540,11 @@
                 <version>${commons-io.version}</version>
             </dependency>
             <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons-beanutils.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>commons-logging</groupId>
                 <artifactId>commons-logging</artifactId>
                 <version>${commons-logging.version}</version>
@@ -563,7 +574,6 @@
 			    <artifactId>commons-compress</artifactId>
 			    <version>${commons-compress.version}</version>
 			</dependency>
-            
 
             <!-- jackson -->
             <dependency>
@@ -889,5 +899,6 @@
     <module>erp-service-core</module>
     <module>erp-service-product</module>
     <module>erp-service-product-api</module>
+    <module>erp-util</module>
   </modules>
 </project>
