添加权限相关方法

--- a/erp-web-jgsf/pom.xml
+++ b/erp-web-jgsf/pom.xml
@@ -108,10 +108,14 @@
 	</profiles>
   
 	<dependencies>
-    	<dependency>
+	   <dependency>
+            <groupId>com.canaan</groupId>
+            <artifactId>erp-service-authorization-api</artifactId>
+        </dependency>
+    	<!-- <dependency>
     		<groupId>com.canaan</groupId>
     		<artifactId>erp-service-privilege-api</artifactId>
-    	</dependency>
+    	</dependency> -->
     	
     	<dependency>
             <groupId>com.canaan</groupId>
