--- a/erp-web-jgsf/src/main/envs/env-dev.properties
+++ b/erp-web-jgsf/src/main/envs/env-dev.properties
@@ -16,7 +16,7 @@ dubbo.zkaddress=zookeeper://10.0.0.103:2181
 sentry.dsn=http://3da79fa46dfa4a5b90f115d78af3556b:b848dbaa8bce4ff79168d5d631a55653@10.0.0.249:9000/21
 
 #===========redis cluster=============
-redis.expire=300000
+
 cluster1.host=10.0.0.102
 cluster1.port=7000
 
@@ -33,3 +33,9 @@ log.home=../logs
 log.dir.infobackup=log_back_up
 log.filesize=5MB
 log.level=DEBUG
+
+#login fail ${login_retry_time}, the login account will be lock for ${login_retry_timeout} times
+login_redis_expire=3600
+login_retry_time=5
+login_retry_timeout=1800000
+login_session_timeout=3600000
